--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -6,6 +6,9 @@
       <th scope="col">Оригинальный текст</th>
       <th scope="col">Переведенные текст</th>
       <th scope="col">Дата просмотра</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
@@ -14,7 +17,12 @@
       <th scope="row"><%=index += 1%></th>
       <td><%= card.original_text %></td>
       <td><%= card.translated_text %></td>
-      <td><%= card.review_date.strftime("%d/%m/%Y") %></td>
+      <td><%= card.review_date %></td>
+      <td><%= link_to 'Show', card_path(card) %></td>
+      <td><%= link_to 'Edit', edit_card_path(card) %></td>
+      <td><%= link_to 'Destroy', card_path(card),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
   </tbody>
