--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -12,8 +12,8 @@
       </ul>
     </div>
   <% end %>
-  <%= f.input :original_text, as: :string, :label => 'Оригинальный текст', :error => false %>
-  <%= f.input :translated_text, as: :string, :label => 'Переведенный текст', :error => false%>
-  <%= f.input :review_date, as: :string, :input_html => { :value => Date.today},:label => 'Дата просмотра', :readonly => true %>
+  <%= f.input :original_text, as: :string, label: 'Оригинальный текст', error: false %>
+  <%= f.input :translated_text, as: :string, label: 'Переведенный текст', error: false%>
+  <%= f.input :review_date, as: :string, input_html: { value: Date.today}, label: 'Дата просмотра', readonly: true %>
   <%= f.button :submit,'Cоздать', class: "btn-primary" %>
 <% end %>
