--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
       <div class="inner">
         <h3 class="masthead-brand" >Флэшкарточкер</h3>
         <nav class="nav nav-masthead justify-content-center">
-          <%=link_to "Все карточки", cards_path, :class => "nav-link active"%>
-          <%=link_to "Добавить карточку", new_card_path, :class => "nav-link"%>
+          <%=link_to "Все карточки", cards_path, class: "nav-link active"%>
+          <%=link_to "Добавить карточку", new_card_path, class: "nav-link"%>
         </nav>
       </div>
     </header>
