--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -2,8 +2,7 @@
   <% if @card.errors.any? %>
     <div id="error_explanation">
       <h2>
-        <%= pluralize(@card.errors.count, "error") %> prohibited
-        this article from being saved:
+        <%= t('error', count: @card.errors.size) %>
       </h2>
       <ul>
         <% @card.errors.full_messages.each do |msg| %>
@@ -12,8 +11,8 @@
       </ul>
     </div>
   <% end %>
-  <%= f.input :original_text, as: :string, label: 'Оригинальный текст', error: false %>
-  <%= f.input :translated_text, as: :string, label: 'Переведенный текст', error: false%>
-  <%= f.input :review_date, as: :string, input_html: { value: Date.today}, label: 'Дата просмотра', readonly: true %>
+  <%= f.input :original_text, as: :string, error: false %>
+  <%= f.input :translated_text, as: :string, error: false%>
+  <%= f.input :review_date, as: :string, input_html: { value: Date.today}, readonly: true %>
   <%= f.button :submit,'Cоздать', class: "btn-primary" %>
 <% end %>
