--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -14,5 +14,5 @@
   <%= f.input :original_text, as: :string, error: false %>
   <%= f.input :translated_text, as: :string, error: false%>
   <%= f.input :review_date, as: :string, input_html: { value: Date.today}, readonly: true %>
-  <%= f.button :submit,'Cоздать', class: "btn-primary" %>
+  <%= f.button :submit, class: "btn-primary" %>
 <% end %>
