--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 		  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Флэшкарточкер</h1>
-    <p class="lead">Первый в мире удобный менеджер флеш-карточек. Именно так.</p>
+    <h1 class="cover-heading"><%= t :project_name %></h1>
+    <p class="lead"> <%= t :project_description %> </p>
   </main>
