--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,17 +1,17 @@
 <p>
-  <strong>Title:</strong>
+  <strong><%= t ('activerecord.attributes.card.original_text') %>: </strong>
   <%= @card.original_text %>
 </p>
 
 <p>
-  <strong>Text:</strong>
+  <strong><%= t ('activerecord.attributes.card.translated_text') %>: </strong>
   <%= @card.translated_text %>
 </p>
 
 <p>
-  <strong>Text:</strong>
+  <strong><%= t ('activerecord.attributes.card.review_date') %>: </strong>
   <%= @card.review_date %>
 </p>
 
-<%= link_to 'Edit', edit_card_path(@card) %>
-<%= link_to 'Back', cards_path %>
+<%= link_to t(:link_edit), edit_card_path(@card) %>
+<%= link_to t(:link_back), cards_path %>
